Fixing units, property names, and pom.xml (poi)